--- a/components.html
+++ b/components.html
@@ -15,7 +15,7 @@
 		</ul>
 	</nav>
 	<button id="left-menu-control">
-		burger
+		open
 	</button>
 	<script src="components/nav.js"></script>
 </body>
