--- a/components.html
+++ b/components.html
@@ -1,22 +1,26 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
-	<meta charset="UTF-8">
-	<title>Components</title>
-		<link rel="stylesheet" href="components/nav.css">
+    <script src="https://kit.fontawesome.com/07a8a3cb43.js"></script>
+    <meta charset="UTF-8">
+    <title>Components</title>
+    <link rel="stylesheet" href="components/nav.css">
 </head>
+
 <body>
-	<nav id="left-menu">
-		<ul>
-			<li><a href="#">Home</a></li>
-			<li><a href="#">About me</a></li>
-			<li><a href="#">Portfolio</a></li>
-			<li><a href="#">Blog</a></li>
-		</ul>
-	</nav>
-	<button id="left-menu-control">
-		open
-	</button>
-	<script src="components/nav.js"></script>
+    <nav id="left-menu">
+        <ul>
+            <li><a href="#">Home</a></li>
+            <li><a href="#">About me</a></li>
+            <li><a href="#">Portfolio</a></li>
+            <li><a href="#">Blog</a></li>
+        </ul>
+    </nav>
+    <button id="left-menu-control">
+    	<i class="fas fa-bars"></i>
+    </button>
+    <script src="components/nav.js"></script>
 </body>
+
 </html>
