--- a/game/index.html
+++ b/game/index.html
@@ -11,5 +11,6 @@
 </body>
 <script src="js/game.js"></script>
 <script src="js/hero.js"></script>
+<script src="js/coins.js"></script>
 <script src="js/main.js"></script>
 </html>
