intersection of coins and hero

--- a/game/index.html
+++ b/game/index.html
@@ -8,9 +8,22 @@
 <body>
 	<div id="stage">
 	</div>
+	<div id="info">
+		<div>
+		<span class="coins">0</span> coin
+		</div>
+		<div>
+		<span class="skills"> ... </span>
+		</div>
+		<div>
+		<span class="level">0</span> level
+		</div>
+	</div>
 </body>
+<script src="js/helper.js"></script>
 <script src="js/game.js"></script>
 <script src="js/hero.js"></script>
 <script src="js/coins.js"></script>
+<script src="js/info.js"></script>
 <script src="js/main.js"></script>
 </html>
